--- a/package.json
+++ b/package.json
@@ -43,8 +43,7 @@
     "mocha": "^2.4.5",
     "moment": "^2.17.1",
     "mssql": "^3.3.0",
-    "node-rest-client": "^2.5.0",
-    "q": "^1.4.1"
+    "node-rest-client": "^2.5.0"
   },
   "homepage": "https://github.com/gbrian/grafana-simple-sql-datasource#readme"
 }
